--- a/e3mall-manager/e3mall-manager-service/pom.xml
+++ b/e3mall-manager/e3mall-manager-service/pom.xml
@@ -56,5 +56,35 @@
 				<artifactId>e3mall-manager-interface</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-all</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>cn.itcast</groupId>
+				<artifactId>e3mall-search-service</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+				<type>war</type>
+			</dependency>
+			<dependency>
+				<groupId>cn.itcast</groupId>
+				<artifactId>e3mall-search-interface</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>redis.clients</groupId>
+				<artifactId>jedis</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>cn.itcast</groupId>
+				<artifactId>e3mall-content-service</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+				<type>war</type>
+			</dependency>
+			<dependency>
+				<groupId>cn.itcast</groupId>
+				<artifactId>e3mall-content-interface</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
 	</dependencies>
 </project>
